syntax="proto3";

option go_package = "/pb";

service PositionService {
  rpc OpenPosition (OpenPositionRequest) returns (OpenPositionResponse) {}
  rpc ClosePosition (ClosePositionRequest) returns (ClosePositionResponse) {}
  rpc GetOpenPosition (GetOpenPositionRequest) returns (GetOpenPositionResponse) {}
}

message OpenPositionRequest {
  string symbol = 1;
  bool is_buy_type = 2;
  string price_id = 3;
}

message OpenPositionResponse {
  int64 position_id = 1;
}

message ClosePositionRequest {
  int64 position_id = 1;
  string price_id = 2;
}

message ClosePositionResponse {
  double profit = 1;
}

message GetOpenPositionRequest {
  int64 position_id = 1;
}

message GetOpenPositionResponse {
  double add_price = 1;
  string symbol = 2;
  bool is_buy_type = 3;
}